# pattern-finder

./: .gitignore  CMakeLists.txt  HELP.txt  README.txt
BaseCodeCompletelyParallel/: ChunkFactory.cpp  ChunkFactory.h  FileReader.cpp  FileReader.h  Forest.cpp  Forest.h  Logger.cpp  Logger.h  MemoryUtils.h  PListArchive.cpp  PListArchive.h  PatternFinder  ProcessorConfig.cpp  ProcessorConfig.h  ProcessorStats.cpp  ProcessorStats.h  StopWatch.cpp  StopWatch.h  TreeHD.cpp  TreeHD.h  TreeRAM.cpp  TreeRAM.h  TreeRAMExperiment.cpp  TreeRAMExperiment.h  TypeDefines.h  gccmallocmakefile.mak  gccmallocmakefiledebug.mak  gmon.out  main.cpp  mman.cpp  mman.h  tcmallocmakefile.mak  tcmallocmakefiledebug.mak
Data/: Braveheart.txt  randomnumbers.txt
Matlab/: PatternProcessor.m
PatternDetectiveTCMallocCompletelyParallel/: DRAMVsHardDiskPerformance.m  DRAMtoHDProcessingLiminationSpeeds.m  MostCommonPatternLengthVsCoveragePercentage.m  OverlappingVsNonOverlappingFileSpeeds.m  Overlapping_NonOverlappingComparison.m  Parser.m  PatternDetective.opensdf  PatternDetective.sln  PatternProcessor.m  ProcessTimeVsFileSize.m  READMECMDARGS.txt  ReadMe.txt
PatternDetectiveTCMallocCompletelyParallel/PatternDetective/: PatternDetective.vcxproj  PatternDetective.vcxproj.filters  libtcmalloc_minimal-debug.exp  libtcmalloc_minimal-debug.ilk  (+2 more)
matlab/: DRAMtoHDProcessingLiminationSpeeds.m  MostCommonPatternLengthVsCoveragePercentage.m  OverlappingVsNonOverlappingFileSpeeds.m  PatternProcessor.m
scripts/: segmentedRootProcessing.py  splitFileForProcessing.py  testDebugScript.bat  testDebugScript.sh  testReleaseScript.bat  testScript.bat  testScript.sh
(+321 files in other folders)
